--- a/src/components/atoms/button-component/button-component.css
+++ b/src/components/atoms/button-component/button-component.css
@@ -135,8 +135,17 @@ button,
 }
 
 .text-base {
-  font-size: 1rem;
+  /* font-size: 1rem; */
+  font-size: 16px;
   line-height: 1.5rem;
+}
+
+.button-sold {
+  display: inline-flex;
+  padding: var(--spacing-vertical-padding, 8px) var(--spacing-horizontal-padding, 24px);
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .font-bold {
