--- a/src/global/global.css
+++ b/src/global/global.css
@@ -159,7 +159,7 @@ html {
 */
 
 body {
-  margin: 0;
+  /* margin: 0; */
   /* 1 */
   line-height: inherit;
   /* 2 */
@@ -198,10 +198,10 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+/* h6 {
   font-size: inherit;
   font-weight: inherit;
-}
+} */
 
 /*
 Reset links to optimize for opt-in styling instead of opt-out.
@@ -305,7 +305,7 @@ textarea {
   /* 1 */
   color: inherit;
   /* 1 */
-  margin: 0;
+  /* margin: 0; */
   /* 2 */
   padding: 0;
   /* 3 */
@@ -427,11 +427,11 @@ hr,
 figure,
 p,
 pre {
-  margin: 0;
+  /* margin: 0; */
 }
 
 fieldset {
-  margin: 0;
+  /* margin: 0; */
   padding: 0;
 }
 
@@ -443,7 +443,7 @@ ol,
 ul,
 menu {
   list-style: none;
-  margin: 0;
+  /* margin: 0; */
   padding: 0;
 }
 
